Upgraded to scala-maven-plugin 3.1.3